<resources>
    <string name="app_name">GymApp</string>
    <string name="show_sessions">Show Sessions</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>

    <string name="user_email">

    </string>
    <string name="user_pass">

    </string>

    <string name="login_preference">
        android.example.com.gymapp_login_preference
    </string>

    <string name="login_status_preference">
        android.example.com.gymapp_login_status_preference
    </string>
    <string name="start_a_session">Start a session</string>
    <string name="view_past_sessions">View Past Sessions</string>
    <string name="show_gyms_in_network">Show Gyms in Network</string>
    <string name="show_nearby_gyms">Show Nearby Gyms</string>
    <string name="logout">Logout</string>
    <string name="show_profile">Show Profile</string>


</resources>
